Resources/nginx-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: ingress-nginx-controller
spec: 
  selector: 
    matchLabels:
      name: ingress-nginx 
  template: 
    metadata:
      labels:
        name: ingress-nginx 
    spec: 
      containers: 
        - name: controller 
          image: k8s.gcr.io/ingress-nginx/controller:v1.1.2
          args: 
            - /nginx-ingress-controller 
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
            - --election-id=ingress-controller-leader
            - --controller-class=k8s.io/ingress-nginx
            - --ingress-class=external-nginx
            - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
          ports: 
            - name: http
              containerPort: 80
              protocol: TCP 
            - name: https 
              containerPort: 443
              protocol: TCP
