Resources/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller 
  namespace: default
spec:
  type: LoadBalancer 
  ports:
  - name: http 
    port: 80
    protocol: TCP
    targetPort: http
    appProtocol: http 
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
    appProtocol: https 
  selector: 
   name: ingress-nginx
