Resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: ingress-backend
spec:
  rules: 
  - host: localhost
    http: 
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: backend
            port:
              number: 1337
